doc: fixed overflow-x for roll effect

--- a/assets/less/doc/main.less
+++ b/assets/less/doc/main.less
@@ -20,6 +20,7 @@
 body {
 	padding-top    : 10px;
 	padding-bottom : 20px;
+	overflow-x: hidden;
 }
 
 // Container
